# trainminal

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py  test_monitor.py  test_multigpu.py
examples/: pytorch_example.py  simple_example.py  test_exceptions.py  test_plotting.py
trainminal/: __init__.py  cli.py  display.py  exceptions.py  metrics.py  monitor.py  plotting.py  resources.py  utils.py
